--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lab1/lib/forge-std"]
 	path = lab1/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lab2/lib/forge-std"]
+	path = lab2/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
